Changelog on Liferay's Homework:
- 07/08/2023: Ubuntu Jammy (22.04) have been installed in Virtual Box
- 07/08/2023: Docker.sh added to repository that installs prequisites,docker.io,docker-compose with error handling ( Validate Envioment)
- 07/08/2023: Created:: Dockerfile for Task 4