@@ -1,0 +1,7 @@
+<html>
+    <body>
+        <h1>Docker is cool</h1>
+        <p>Container was started at <?php echo date('Y-m-d H:i:s'); ?></p>
+        <img src="liferay.png" alt="Liferay Logo">
+    </body>
+</html>
